<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.95">


        <TextView
            android:id="@+id/textView_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servings_colon"
                android:layout_weight="0.05"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView_servings_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servings"
                android:layout_weight="0.95"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

        </LinearLayout>



        <TextView
            android:id="@+id/textView_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_colon"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:id="@+id/listView_show_ingredients"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textView_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/steps_colon"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView_show_steps" />




    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>



    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_weight="0.05"/>

</LinearLayout>